<resources>
    <string name="app_name">CT800_client</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="exampleStreet">ExampleStreet</string>
    <string name="exampleEmail">email.example@gmail.com</string>
    <string name="exampleResidency">ExampleResidency</string>
    <string name="exampleStreetNumber">23</string>
    <string name="exampleZip">12345</string>
    <string name="cancel">Cancel</string>
    <string name="exampleName">Firstname Lastname</string>
    <string name="changeFarmer">Change Farmer</string>
    <string name="hintFarmerName">Firstname &amp; Lastname</string>
    <string name="hintFarmerEmail">Email</string>
    <string name="hintFarmerResidence">Residence</string>
    <string name="hintFarmerZip">Zipcode</string>
    <string name="hintFarmerStreet">Street</string>
    <string name="hintFarmerStreetNumber">StreetNr.</string>
</resources>
