<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.denkmayr.andreas.ct800_client.FarmerFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFartmerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etFartmerName"
            android:layout_width="215dp"
            android:layout_height="42dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hintFarmerName"
            android:inputType="textPersonName"
            android:text="@string/exampleName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="11dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFarmerEmail"
        android:layout_width="299dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/tilFartmerName"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="86dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etFarmerEmail"
            android:layout_width="299dp"
            android:layout_height="48dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/hintFarmerEmail"
            android:inputType="textEmailAddress"
            android:text="@string/exampleEmail"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="11dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFarmerResidence"
        android:layout_width="291dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toLeftOf="@+id/tilFarmerZip"
        app:layout_constraintTop_toBottomOf="@+id/tilFarmerEmail"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="178dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etFarmerResidence"
            android:layout_width="291dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hintFarmerResidence"
            android:inputType="textPersonName"
            android:text="@string/exampleResidency"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="11dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFarmerZip"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/tilFarmerEmail"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="178dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etFarmerZip"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/hintFarmerZip"
            android:inputType="number"
            android:text="@string/exampleZip"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="11dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFarmerStreet"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toLeftOf="@+id/tilFarmerStreetNumber"
        app:layout_constraintTop_toBottomOf="@+id/tilFarmerResidence"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="270dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etFarmerStreet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/hintFarmerStreet"
            android:inputType="textPersonName"
            android:text="@string/exampleStreet"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="11dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilFarmerStreetNumber"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/tilFarmerResidence"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="327dp"
        tools:layout_editor_absoluteY="270dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etFarmerStreetNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/hintFarmerStreetNumber"
            android:inputType="number"
            android:text="@string/exampleStreetNumber"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="11dp" />
    </android.support.design.widget.TextInputLayout>

    <ToggleButton
        android:id="@+id/toggleFarmerEditMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/tilFarmerStreet"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="354dp" />

    <Button
        android:id="@+id/btFarmerSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintRight_toLeftOf="@+id/btFarmerCancel"
        app:layout_constraintTop_toBottomOf="@+id/tilFarmerStreet"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="354dp" />

    <Button
        android:id="@+id/btFarmerCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/cancel"
        app:layout_constraintRight_toLeftOf="@+id/toggleFarmerEditMode"
        app:layout_constraintTop_toBottomOf="@+id/tilFarmerStreet"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="354dp" />

    <Button
        android:id="@+id/btFarmerPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/changeFarmer"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        tools:layout_constraintBottom_creator="0"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="439dp" />

</android.support.constraint.ConstraintLayout>
